--- a/Views/Race/Index.cshtml
+++ b/Views/Race/Index.cshtml
@@ -1,6 +1,30 @@
+@model IEnumerable<Race>
 @{
-    ViewData["Title"] = "Race Page";
+  ViewData["Title"] = "Race Page";
 }
-<div>
-    Hello Race Index Chnage
+<div class="album py-5 bg-body-tertiary">
+  <div class="container">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      @foreach (var race in Model)
+      {
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="@race.Image" />
+            <div class="card-body">
+              <p class="card-text font-bold">@race.Title</p>
+              <p class="card-text">@race.Description</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <a asp-controller="Race" asp-action="Detail" asp-route-id="@race.Id"
+                    class="btn btn-sm btn-outline-secondary">View</a>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-body-secondary">@race.RaceCategory</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      }
+    </div>
+  </div>
 </div>
